--- a/_common.html
+++ b/_common.html
@@ -18,7 +18,7 @@
                     New Arrival
                 </h2>
                 <!-- Product Prewiew Cart -->
-                <!-- <article class="item-product">
+                <article class="item-product">
                     <a href="#" class="item-product__favorite _icon-favorite"></a>
                     <a href="#" class="item-product__picture-link">
                         <img src="img/modules/for-men/01x3.jpg" class="item-product__image" alt="Image">
@@ -31,8 +31,8 @@
                         <div class="item-product__label">Explore Now!</div>
                         <div class="item-product__price">$38.00</div>
                     </div>
-                </article> -->
-                <!-- <article class="item-product item-product--category">
+                </article>
+                <article class="item-product item-product--category">
                     <a href="#" class="item-product__picture-link">
                         <img src="img/modules/for-men/01x3.jpg" class="item-product__image" alt="Image">
                     </a>
@@ -43,13 +43,13 @@
                         <div class="item-product__label">Explore Now!</div>
                         <a href="#" class="item-product__link _icon-a-right"></a>
                     </div>
-                </article> -->
+                </article>
                 <!-- Button -->
-                <!-- <a href="#" class="button">Button Lorem ipsum dolor sit amet consectetur.</a>
+                <a href="#" class="button">Button Lorem ipsum dolor sit amet consectetur.</a>
                 <a href="#" class="button button--white">Button white</a>
                 <a href="#" class="button button--border">Button border</a>
                 <button class="button">Button Lorem ipsum dolor sit amet consectetur.</button>
-                <button disabled class="button button--border">Button border</button> -->
+                <button disabled class="button button--border">Button border</button>
                 <!-- Rating -->
                 <div class="rating">
                     <div class="rating__items">
