add product.html and catalog.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                                 <a href="#" class="menu__link">Men</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#" class="menu__link">Women</a>
+                                <a href="catalog.html" class="menu__link">Women</a>
                             </li>
                             <li class="menu__item">
                                 <a href="#" class="menu__link">Combos</a>
@@ -118,7 +118,7 @@
                     </div>
                 </div>
                 <!-- If we need pagination -->
-                <div class="hero_pagination"></div>
+                <div class="hero__pagination"></div>
                 <!-- If we need navigation buttons -->
                 <button class="hero__arrow hero__arrow--prev _icon-ch-left"></button>
                 <button class="hero__arrow hero__arrow--next _icon-ch-right"></button>
